--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "typescript": "~3.8.3",
     "vue-cli-plugin-element": "^1.0.1",
     "vue-cli-plugin-i18n": "^1.0.1",
+    "vue-particles": "^1.0.9",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
