--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "core-js": "^3.6.4",
     "element-ui": "^2.4.5",
     "normalize.css": "^8.0.1",
+    "swiper": "^6.1.1",
     "vue": "^2.6.11",
+    "vue-awesome-swiper": "^4.1.1",
     "vue-class-component": "^7.2.3",
     "vue-i18n": "^8.17.3",
     "vue-property-decorator": "^8.4.1",
