--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
     "vue-i18n": "^8.17.3",
     "vue-property-decorator": "^8.4.1",
     "vue-router": "^3.1.6",
-    "vuex": "^3.1.3",
-    "vuex-class": "^0.3.2"
+    "vuex": "^3.1.3"
   },
   "devDependencies": {
     "@types/jest": "^24.0.19",
@@ -55,7 +54,9 @@
     "vue-cli-plugin-element": "^1.0.1",
     "vue-cli-plugin-i18n": "^1.0.1",
     "vue-particles": "^1.0.9",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.11",
+    "vuex-class": "^0.3.2",
+    "vuex-module-decorators": "^0.17.0"
   },
   "eslintConfig": {
     "root": true,
